# chon

./: .gitignore  requirements.txt  vercel.json
api/: index.py  requirements.txt
backend/: README.md  app.py  pyproject.toml
backend/migrations/: 01_create_tables.sql
database/: SQL_query_generator.py  generate_mapping.py  output.json  question_mapping.json  unique_questions.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  router.ts
frontend/src/api/: questionnaire.ts
frontend/src/components/LanguageSelector/: LanguageSelector.css  LanguageSelector.tsx
frontend/src/components/Navigation/: Navigation.css  Navigation.tsx
frontend/src/contexts/: AuthContext.tsx  LanguageContext.tsx
frontend/src/hooks/: useViewportControl.ts
frontend/src/i18n/: translations.ts
frontend/src/pages/Contact/: Contact.css  Contact.tsx
frontend/src/pages/Home/: Home.css  Home.tsx
frontend/src/pages/Intro/: Intro.css  Intro.tsx
frontend/src/pages/Login/: Login.css  Login.tsx
frontend/src/pages/NotFound/: NotFound.css  NotFound.tsx
frontend/src/pages/PersonalityTest/: BirthWeightInput.tsx  BothQuestionnaire.tsx  ChildrenCountDropdown.tsx  CountryAutocomplete.tsx  IdentitySelection.tsx  IntroSection.tsx  PersonalityTest.css  PersonalityTest.tsx  PersonalityTest.tsx.bak3  PersonalityTest.tsx.old  PrivacyStatement.tsx  QuestionBlock.tsx  QuestionnaireSwitcher.tsx  QuestionsSection.tsx  ScrollUtils.ts  (+2 more)
frontend/src/utils/: archetypes.ts  scoring.ts  userIdentification.ts
(+43 files in other folders)
